static dashboard is done

--- a/dashboard/index.css
+++ b/dashboard/index.css
@@ -1,7 +1,8 @@
-  body {
+body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
+    font-size: 18px;
 }
 .sidebar {
     height: 100%;
@@ -275,4 +276,123 @@ textarea{
 }
 .description p{
     padding: 30px;
+}
+.Skills{
+    background-image: linear-gradient(-45deg,#22283177,#222831);
+    display: none;
+} 
+ h1{
+    color:white ;
+    justify-content: center;
+    text-align: center;
+}
+span{
+    color:#68E0CF
+}
+
+.image-gallery {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    
+}
+
+.image-item {
+    text-align: center;
+    margin: 50px;
+}
+
+.image-item img {
+    width:60px;
+    height: 60px; 
+    background-color: white;
+    border-radius: 100px;
+    border-width: 500px;
+    
+}
+
+.image-item p {
+    margin-top: 5px;
+    font-size: 18px;
+    color:white;
+}
+
+
+
+@media (max-width: 768px) {
+    .Skills{
+        padding: 20px;
+    }
+
+    h1 {
+        font-size: 24px;
+    }
+
+    .image-gallery {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center; 
+    }
+
+    .image-item {
+        text-align: center;
+        margin: 30px;
+    }
+
+    .image-item img {
+        width: 100px; 
+        height: 100px;
+        border-radius: 50%; 
+    }
+
+    .image-item p {
+        font-size: 14px; 
+        margin-top: 10px; 
+    }
+}
+
+/* this is for popup*/
+.popup {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: 1;
+    justify-content: center;
+    align-items: center;
+}
+
+.popup-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 5px;
+    text-align: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.close-popup {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+#add-skill-form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+#image-upload,
+#skill-name,
+button[type="submit"] {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
 }
